# AtlasNet

./: .clang-format  .clangd  .gitignore  AtlasNetSettings.json  AtlasNetVars.sh  CMakeLists.txt  CMakePresets.json  CMakePresets.json-old  ClientTest.sh  Dockerfile.god  Dockerfile.partition  Doxyfile  GenDocs.sh  GodDockerFile  IDE_Env_Setup.sh  KDNetVars.sh  README.md  README.txt  Setup.sh  Start.sh  SwarmWorkerSetup.sh  flake.nix  god_watcher.sh  imgui.ini  premake5.lua  setup.sh  vcpkg.json
AtlasNet/: .gitignore  AtlasNetInstall.sh  AtlasNetSetup.sh  AtlasNetToolchain.cmake  CMakeLists.txt  vcpkg.json
AtlasNet/API/Client/: CMakeLists.txt
AtlasNet/API/Client/src/: AtlasNetClient.cpp  AtlasNetClient.hpp
AtlasNet/API/Server/: CMakeLists.txt
AtlasNet/API/Server/Unity/: EntityJsonReciever.hpp  EntityJsonSender.hpp
AtlasNet/API/Server/src/: AtlasNetServer.cpp  AtlasNetServer.hpp
AtlasNet/apps/AtlasNet/src/: ImageDockerFiles.hpp  MiscDockerFiles.hpp
AtlasNet/apps/Cartograph/: CMakeLists.txt
AtlasNet/apps/WatchDog/src/: WatchDog.hpp
AtlasNet/cmake/: AddSwigLibrary.cmake  Definitions.cmake  Deps.cmake  GenerateSwigI.cmake  Install.cmake  SetupNode.cmake
AtlasNet/docker/: BuildDockerImages.cmake  BuildDockerImages.sh  buildkitd.pi.toml  buildkitd.toml
AtlasNet/docker/dockerfiles/: BuildDockerfile  CopyDockerfile  docker-bake.copy.json  docker-bake.json
AtlasNet/lib/BuiltInDB/: CMakeLists.txt
AtlasNet/lib/BuiltInDB/src/: BuiltInDB.cpp
AtlasNet/lib/Client/: CMakeLists.txt
AtlasNet/lib/Client/src/: Client.hpp  ClientLink.cpp  ClientLink.hpp  ClientManifest.cpp  ClientManifest.hpp  ProxyLink.hpp-exc
AtlasNet/lib/Database/: CMakeLists.txt
AtlasNet/lib/Debug/: CMakeLists.txt
AtlasNet/lib/Debug/src/: Log.hpp
AtlasNet/lib/Docker/: CMakeLists.txt
AtlasNet/lib/Docker/src/: DockerIO.hpp
AtlasNet/lib/Entity/: CMakeLists.txt
AtlasNet/lib/Entity/src/: Entity.hpp  EntityList.hpp  Transform.hpp
AtlasNet/lib/Events/: CMakeLists.txt
AtlasNet/lib/Events/src/: EventSystem.hpp
AtlasNet/lib/Global/: CMakeLists.txt
AtlasNet/lib/Global/src/: AtlasNet.hpp
AtlasNet/lib/Heuristic/: CMakeLists.txt
AtlasNet/lib/Heuristic/exc/: Heuristic.cpp  PartitionEntityManifest.hpp  QuadtreeHeuristic.cpp
AtlasNet/lib/Interlink/: CMakeLists.txt
AtlasNet/lib/Interlink/exc/: InterlinkPacket.hpp  ProxyRegistry.hpp
AtlasNet/lib/Interlink/src/: Connection.hpp  Interlink.cpp  Interlink.hpp  InterlinkEnums.hpp  InterlinkIdentifier.cpp  InterlinkIdentifier.hpp
AtlasNet/lib/InternalDB/: CMakeLists.txt
AtlasNet/lib/InternalDB/src/: InternalDB.cpp  InternalDB.hpp
AtlasNet/lib/Native/: CMakeLists.txt
AtlasNet/lib/Native-exc/: EntityList.hpp
AtlasNet/lib/Native-exc/exc/: EntityManifest.hpp  GridCellManifest.hpp  Heuristic.hpp  InterlinkMessage.hpp  ProxyRegistry.cpp  Shape.cpp  Shape.hpp
AtlasNet/lib/Native/BuiltInDB/: BuiltInDB.cpp  BuiltInDB.hpp
AtlasNet/lib/Native/Client/: Client.hpp  ClientEnums.hpp  ClientLink.cpp  ClientLink.hpp  ClientManifest.cpp  ClientManifest.hpp
AtlasNet/lib/Native/Command/: ClientCommandBus.cpp  ClientCommandBus.hpp  CommandBus.cpp  CommandBus.hpp  CommandRegistry.cpp  CommandRegistry.hpp  CommandRouter.cpp  CommandRouter.hpp  NetCommand.hpp  ServerCommandBus.cpp  ServerCommandBus.hpp
AtlasNet/lib/Network/: CMakeLists.txt
AtlasNet/lib/Web/: CMakeLists.txt
AtlasNet/libs/BuiltInDB/: CMakeLists.txt
AtlasNet/libs/Database/: CMakeLists.txt
AtlasNet/libs/Interlink/: CMakeLists.txt
AtlasNet/libs/InternalDB/: CMakeLists.txt
AtlasNet/runtime/cartograph/: CMakeLists.txt  next.config.ts  package.json  tsconfig.json
AtlasNet/runtime/proxy/: CMakeLists.txt
AtlasNet/runtime/shard/: CMakeLists.txt
AtlasNet/runtime/watchdog/: CMakeLists.txt
AtlasNet/scripts/Dockerfiles/: Dockerfile
Examples/RTS/lib/: CMakeLists.txt
Examples/RTS/server/: CMakeLists.txt
Examples/Sandbox/: AtlasNetSettings.json  CMakeLists.txt  SandboxServer.dockerfile  sandbox-server.json
Examples/Sandbox/client/: CMakeLists.txt
Examples/Sandbox/lib/: CMakeLists.txt
Examples/Sandbox/server/: CMakeLists.txt
ScriptGUI/: ImguiBase  (+1 more)
apps/Bootstrap/: CMakeLists.txt
apps/Bootstrap/src/: Bootstrap.cpp  Bootstrap.hpp  BuiltInDbDockerFiles.hpp  CartographDockerFiles.hpp  Entry.cpp  ImageDockerFiles.hpp  MiscDockerFiles.hpp
apps/Cartograph/: CMakeLists.txt  Dockerfile  package-lock.json  vcpkg.json
apps/Cartograph-New/: CMakeLists.txt  Dockerfile
apps/Cartograph-New/web/: package-lock.json
apps/Cartograph/src/: Cartograph.cpp  EmbedResources.cpp  EmbedResources.hpp  Entry.cpp  PartitionVisualization.cpp
apps/Cartograph/web/: .gitignore  package.json
dev/Sandbox/client/: CMakeLists.txt
examples/TankBattle/: CMakeLists.txt
libs/AtlasNet/Client/: CMakeLists.txt
src/TestUnityAPI/: BuildCommands.txt  CMakeLists.txt  KDNetUnityAPI.cpp  KDNetUnityAPIHelper.hpp  TestPartition.hpp
src/TestUnityAPI/Client/: AtlasClientBridge.cpp  AtlasClientBridge.h
src/TestUnityAPI/Server/: AtlasServerUnityBridge.cpp  AtlasServerUnityBridge.h  AtlasUnityBridge.cpp  AtlasUnityBridge.h  BuildCommands.txt  CMakeLists.txt
tests/: CMakeLists.txt  PythonRequirements.txt  TestDeps.cmake
tests/Integration/: CMakeLists.txt
tests/Integration/ValkeyConn/: ValkeyConnTest.cpp  ValkeyConnTest.py
tests/Integration/ValkeyIO/: CMakeLists.txt  ValkeyConnTest.cpp  ValkeyContainer.hpp  ValkeyIO.cpp  ValkeySetup.py  ValkeySetupCluster.py  ValkeyTestFunc.hpp
tests/Unit/: CMakeLists.txt
tests/Unit/Address/: Address.cpp  CMakeLists.txt
tests/Unit/Entity/: CMakeLists.txt  EntityTests.cpp
tests/Unit/Heuristic/: CMakeLists.txt  Heuristic.cpp  KDTree.hpp
tests/Unit/Jobs/: CMakeLists.txt  Jobs.cpp
tests/Unit/Messages/: CMakeLists.txt  Client.cpp  MessageLocal.cpp  MessageTests.py  Messages.hpp  Server.cpp  Server.hpp  Tests.cpp
tests/Unit/RPC/: CMakeLists.txt  RPC.cpp
tests/Unit/Serialization/: CMakeLists.txt  Serialization.cpp
tests/Unit/src/: Entry.cpp
tests/Utils/: DebugView.cpp  DebugView.hpp  TestUtils.cpp  TestUtils.hpp
tests/Utils/SceneView/: SceneView.cpp
(+1177 files in other folders)
